--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="sphere">
         <span id="minDec" class="number">0</span>
         <span id="minUni" class="number">0</span>
-        <span>:</span>
+        <span class="timer-colon">:</span>
         <span id="secDec" class="number">0</span>
         <span id="secUni" class="number">0</span>
         <div id="milliseconds">
